--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^4.0.0",
     "fastify": "^4.28.1",
+    "fastify-cors": "^6.0.3",
     "tsc": "^2.0.4"
   }
 }
