--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "@fastify/autoload": "^5.10.0",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^4.0.0",
-    "fastify": "^4.28.1",
-    "fastify-cors": "^6.0.3",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/swagger": "^9.4.0",
+    "@fastify/swagger-ui": "^5.1.0",
+    "fastify": "^5.1.0",
     "tsc": "^2.0.4"
   }
 }
